# ambient_light_epilepsy_analysis

./: .gitignore  pyproject.toml
analysis/: control_lux_summary_G.csv  control_lux_summary_H.csv  lux_5min_fmatch_analysis.csv  pwe_lux_summary_G.csv  pwe_lux_summary_H.csv
analysis/lux/: lux_5min_fmatch_analysis.csv
notebooks/: 01 - Data conversion.ipynb  01 - Data exploration.ipynb  02 - Finding PWE.ipynb  03 - Demographics of PWE.ipynb  04 - Timezone confirmation.ipynb  05 - Testing metrics.ipynb  06 - LUX analysis.ipynb  Finance simulation.ipynb
scripts/: lux_analysis.py
src/ambient_light_epilepsy/: cohort.py  lux_metrics.py  nhanes.py
src/ambient_light_epilepsy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
